feat(tools): 新增空文件夹清理工具并修复 JDK8 兼容问题